Fix board layout bug

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,10 @@ span {
 }
 
 #clue-board {
+  flex-direction: column;
+}
+
+.clue-row {
   display: flex;
 }
 
